--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   </div>
 <div>
     <p style="text-align:center;">Please use the following PGP key for a secure checkout:</p>
+        <p style="text-align:center;">USPS Priority Shipping (3-5 Days)</p>
 <div class="pgp-key" style="text-align:center;max-height:200px;overflow-y:auto;">
     <pre>-----BEGIN PGP PUBLIC KEY BLOCK-----
     [YOUR PGP KEY HERE]
