--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
     /* Add a background image */
     body {
-      background-image: url("bg.jpg");
+      background-image: url("weed.jpg");
       background-size: cover;
     }
     /* Center the PGP key and add padding */
@@ -44,7 +44,7 @@
   <h1>Vendor Shop</h1>
   <div class="product-list">
     <div class="product">
-      <img src="product1.jpg" alt="Product 1">
+      <img src="w.jpg" alt="Product 1">
       <h2>Product 1</h2>
       <p>Description: This is a sample product.</p>
       <p>Price: 0.1 XMR</p>
@@ -59,7 +59,7 @@
 </form>
 </div>
 <div class="product">
-<img src="product2.jpg" alt="Product 2">
+<img src="w.jpg" alt="Product 2">
 <h2>Product 2</h2>
 <p>Description: This is another sample product.</p>
 <p>Price: 0.2 XMR</p>
