--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
     /* Add a background image */
     body {
-      background-image: url("weed.jpg");
+      background-image: url("image.jpg");
       background-size: cover;
     }
     /* Center the PGP key and add padding */
