--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <h1>Vendor Shop</h1>
   <div class="product-list">
     <div class="product">
-      <img src="w.jpg" alt="Product 1">
+      <img src="image1.jpg" alt="Product 1">
       <h2>Product 1</h2>
       <p>Description: This is a sample product.</p>
       <p>Price: 0.1 XMR</p>
@@ -59,7 +59,7 @@
 </form>
 </div>
 <div class="product">
-<img src="w.jpg" alt="Product 2">
+<img src="image2.jpg" alt="Product 2">
 <h2>Product 2</h2>
 <p>Description: This is another sample product.</p>
 <p>Price: 0.2 XMR</p>
